force-app/main/default/objects/PVLScanningComponent__mdt/PVLScanningComponent__mdt.object-meta.xml
<CustomObject>
    <description>PacPoint-MV102419 - Created for PVL phase 1</description>
    <label>PVL Scanning Component</label>
    <pluralLabel>PVL Scanning Component</pluralLabel>
</CustomObject>