force-app/main/default/objects/PVLScanningComponent__mdt/fields/ActiveInactive__c.field-meta.xml
<CustomField>
    <fullName>ActiveInactive__c</fullName>
    <description>PacPoint-MV102419 - Created for PVL phase 1</description>
    <label>Active/Inactive</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Active</fullName>
            </value>
            <value>
                <fullName>Inactive</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>