force-app/main/default/objects/PVLScanningComponent__mdt/fields/ReceivedDate__c.field-meta.xml
<CustomField>
    <fullName>ReceivedDate__c</fullName>
    <description>PacPoint-MV102419 - Created for PVL phase 1</description>
    <label>Received Date</label>
    <type>Date</type>
</CustomField>