force-app/main/default/objects/PVLScanningComponent__mdt/fields/RenewByPermitToPractice__c.field-meta.xml
<CustomField>
    <fullName>RenewByPermitToPractice__c</fullName>
    <description>Used in LicenseMassScanner aura component</description>
    <label>Renew by Permit to Practice</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Sole Practitioner</fullName>
                <default>true</default>
                <label>Sole Practitioner</label>
            </value>
            <value>
                <fullName>Partner</fullName>
            </value>
            <value>
                <fullName>Principal of public accounting firm</fullName>
            </value>
            <value>
                <fullName>Staff member of one of the above</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>