force-app/main/default/objects/PVLScanningComponent__mdt/fields/RenewingPermitToPractice__c.field-meta.xml
<CustomField>
    <fullName>RenewingPermitToPractice__c</fullName>
    <description>Used in LicenseMassScanner component</description>
    <label>Renewing Permit to Practice</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
                <default>true</default>
                <label>Yes</label>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>