force-app/main/default/objects/PVLScanningComponent__mdt/fields/Status__c.field-meta.xml
<CustomField>
    <fullName>Status__c</fullName>
    <description>PacPoint-MV102419 - Created for PVL phase 1</description>
    <label>Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>A3 - Deficiency Notice Sent</fullName>
            </value>
            <value>
                <fullName>E1 - To Executive Officer Awaiting Review</fullName>
                <label>E1 - Awaiting EO Review</label>
            </value>
            <value>
                <fullName>HC - Application Completed</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>