force-app/main/default/objects/PVLScanningComponent__mdt/fields/Type__c.field-meta.xml
<CustomField>
    <fullName>Type__c</fullName>
    <description>PacPoint-CL052120 - Created for PVL - Phase 1 Sprint 3</description>
    <label>Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>RNEW</fullName>
                <default>true</default>
                <label>RNEW</label>
            </value>
            <value>
                <fullName>RSTR</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>